<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filterList"
        android:title="@string/filterList"
        app:showAsAction="ifRoom"
        android:icon="@drawable/filter">
        <menu>
            <item
                android:id="@+id/sortByPrice"
                android:title="@string/sortByPriceLowToHigh"
                android:enabled="true"
                android:iconTint="@color/white"
                app:showAsAction="never" />
            <item
                android:id="@+id/sortByRating"
                android:title="@string/sortByRating"
                android:enabled="true"
                android:iconTint="@color/white"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>