<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FoodDetailPage">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/foodItemImage"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="@dimen/image_height"
                android:contentDescription="@string/foodItemImage"
                android:scaleType="fitXY"
                android:src="@drawable/ic_food_item_sample"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/foodItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_sm"
                android:layout_marginTop="@dimen/space_sm"
                android:padding="@dimen/space_xsm"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foodItemImage"
                tools:text="Veg Rice" />

            <TextView
                android:id="@+id/foodItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:layout_marginEnd="@dimen/space_sm"
                android:layout_marginBottom="@dimen/space_sm"
                android:padding="@dimen/space_xsm"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foodItemImage"
                tools:text="₹ 132.5" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xxl"
                android:padding="@dimen/space_xsm"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foodItemName"
                tools:text="@string/quantity" />

            <LinearLayout
                android:id="@+id/quantityContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_xxsm"
                android:layout_marginEnd="@dimen/space_sm"
                android:layout_marginStart="@dimen/space_sm"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/quantity">

                <ImageView
                    android:id="@+id/reduceItem"
                    android:layout_width="@dimen/icon_size_lg"
                    android:layout_height="@dimen/icon_size_lg"
                    android:clickable="true"
                    android:contentDescription="@string/decreaseItemCount"
                    android:padding="@dimen/space_sm"
                    android:src="@drawable/ic_remove"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/itemCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/space_sm"
                    android:text="@string/zero"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                    android:textColor="?attr/colorOnPrimary" />

                <ImageView
                    android:id="@+id/addItem"
                    android:layout_width="@dimen/icon_size_lg"
                    android:layout_height="@dimen/icon_size_lg"
                    android:clickable="true"
                    android:contentDescription="@string/increaseItemCount"
                    android:padding="@dimen/space_sm"
                    android:src="@drawable/ic_add"
                    app:tint="?attr/colorOnPrimary" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/cart"
        layout="@layout/item_cart_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>