<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CartPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            android:layout_margin="@dimen/space_sm"
            android:scrollbars="vertical"
            tools:itemCount="4"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/item_cart_order_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cartRecyclerView">
            <TextView
                android:id="@+id/billDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:padding="@dimen/space_sm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
                android:text="@string/bill_details" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:padding="@dimen/space_sm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/billDetails"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/total" />

            <TextView
                android:id="@+id/totalOrderPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/billDetails"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/total" />

            <TextView
                android:id="@+id/deliveryCharges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:paddingStart="@dimen/space_sm"
                android:paddingEnd="@dimen/space_sm"
                android:paddingTop="@dimen/space_xxsm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/delivery_charges" />

            <TextView
                android:id="@+id/deliveryChargesAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:paddingStart="@dimen/space_sm"
                android:paddingEnd="@dimen/space_sm"
                android:paddingTop="@dimen/space_xxsm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/thirty" />

            <View
                android:layout_width="@dimen/match_constraint"
                android:layout_height="@dimen/space_xxxsm"
                android:background="@color/dividerLine"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/space_sm"
                android:layout_marginBottom="@dimen/space_sm"
                android:layout_marginStart="@dimen/space_mega_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deliveryCharges" />

            <TextView
                android:id="@+id/totalPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:paddingStart="@dimen/space_sm"
                android:paddingEnd="@dimen/space_sm"
                android:paddingTop="@dimen/space_xxl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deliveryCharges"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/total_payment" />

            <TextView
                android:id="@+id/totalPaymentAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:paddingStart="@dimen/space_sm"
                android:paddingEnd="@dimen/space_sm"
                android:paddingTop="@dimen/space_xxl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deliveryCharges"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/total_payment" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

